# BuyMeAtDaraz

./: docker-compose.yml  pyproject.toml
backend/: Dockerfile
backend/buymeatdaraz/: main.py
backend/buymeatdaraz/routes/: daraz.py
backend/buymeatdaraz/utils/: daraz.py  schemas.py  value_processing.py
buymeatdaraz/: create..py  daraz.py  main.py  test.py
buymeatdaraz/database/: daraz_products.db
buymeatdaraz/output/: daraz_men watch_listings.csv
buymeatdaraz/scrapper/: amazon.py  daraz.py  test.html  test.py  test2.py
buymeatdaraz/scrapper/output/: amazon_products_listings.csv  daraz.md  daraz_pretty.html  daraz_products_listings.csv
buymeatdaraz/utils/: product_value_processing.py  schemas.py
buymeatdaraz/utils/database/: csv.py  sqlite.py
database/: daraz.db
