[tool.poetry]
name = "buymeatdaraz"
version = "0.1.0"
description = ""
authors = ["Shahriar-Ferdoush <1805101@ugrad.cse.buet.ac.bd>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
chromadb = "^0.5.7"
langchain = "^0.3.0"
langchain-community = "^0.3.0"
langchain-chroma = "^0.1.4"
html2text = "^2024.2.26"
langchain-google-genai = "^2.0.0"
playwright = "^1.47.0"
ipykernel = "^6.29.5"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
